fix viewport on iOS

--- a/css/viewport.css
+++ b/css/viewport.css
@@ -16,7 +16,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 main {
